# viban

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
crates/viban-core/: Cargo.toml
crates/viban-core/src/: exec.rs  lib.rs  types.rs
crates/viban-core/src/agents/: claude_code.rs  mod.rs  stream.rs
crates/viban-core/src/db/: boards.rs  migrations.rs  mod.rs  schema.rs
crates/viban-core/src/git/: checkpoint.rs  diff.rs  mod.rs  worktree.rs
crates/viban-core/tests/: git.rs
crates/viban-server/: Cargo.toml
crates/viban-server/src/: auth.rs  main.rs  paths.rs  rpc.rs  ws.rs
crates/viban-server/src/rpc/: attempts.rs  checkpoints.rs  events.rs  mod.rs  review.rs  sessions.rs  tasks.rs
crates/viban-server/tests/: attempts_e2e.rs  git_e2e.rs  rpc_e2e.rs  worktree_e2e.rs
crates/viban-server/tests/common/: mod.rs
docs/decisions/: 0001-rename-conductor-to-viban.md  0002-multiple-attempts-per-task.md  0003-data-outside-the-project-folder.md  0004-app-shell-and-information-architecture.md
docs/research/: ui-competitor-research.md
scripts/: build-sidecar.mjs
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: client.rs  commands.rs  lib.rs  main.rs  project.rs  sidecar.rs
src/components/: app-shell.test.tsx  app-shell.tsx  board-column.tsx  board-view.test.tsx  board-view.tsx  chat-view.test.tsx  chat-view.tsx  checkpoint-bar.test.tsx  checkpoint-bar.tsx  command-palette.test.tsx  command-palette.tsx  confirm-dialog.test.tsx  confirm-dialog.tsx  diff-view.test.tsx  diff-view.tsx  git-init-dialog.test.tsx  git-init-dialog.tsx  inspector.test.tsx  inspector.tsx  run-panel.test.tsx  run-panel.tsx  session-sidebar.tsx  task-card.test.tsx  task-card.tsx  task-detail.test.tsx  task-detail.tsx  task-dialog.test.tsx  task-dialog.tsx  task-list-panel.test.tsx  task-list-panel.tsx  toaster.test.tsx  toaster.tsx
src/components/ui/: button.tsx  command.tsx  dialog.tsx  scroll-area.tsx  textarea.tsx
src/lib/: agent-status.ts  rpc.ts  utils.test.ts
src/stores/: useBoardStore.ts  useToastStore.ts
src/test/: setup.ts
src/types/: agent.ts  board.ts  diff.ts  exec.ts  server.ts  session.ts
