[workspace]
resolver = "2"
members = ["src-tauri", "crates/viban-core", "crates/viban-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
viban-core = { path = "crates/viban-core" }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "process",
    "sync",
    "time",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
