[package]
name = "viban-app"
description = "viban desktop shell"
authors = ["viban contributors"]
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "viban_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
viban-core = { workspace = true }
