[package]
name = "viban-app"
description = "viban desktop shell"
authors = ["viban contributors"]
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "viban_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
anyhow = { workspace = true }
futures-util = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
viban-core = { workspace = true }
