[package]
name = "viban-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
