[package]
name = "viban-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "viban-server"
path = "src/main.rs"

[dependencies]
viban-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
